@startuml

title __SERVICE's Class Diagram__\n

  package  {
    package service {
      class CustomerService {
          + CustomerService()
          + insertCustomer()
          + deleteCustomer()
          + updateCustomer()
          + findCustomer()
          + findCustomerByEmail()
      }
    }
  }
  

  package  {
    package service {
      class MobilePhoneService {
          + MobilePhoneService()
          + insertMobilePhone()
          + updateMobilePhone()
          + deleteMobilePhone()
          + getMobilePhone()
          + getAllMobilePhone()
          + getAvailableMobilePhone()
      }
    }
  }
  

  package  {
    package service {
      class OrderService {
          + OrderService()
          + insertOrder()
          + deleteOrder()
          + updateOrder()
          + findOrder()
          + getAllOrder()
      }
    }
  }
  

  CustomerService o-- CustomerMapper : customerMapper
  MobilePhoneService o-- MobilePhoneMapper : mapper
  OrderService o-- OrderMapper : orderMapper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
